# otb

./: .gitignore  CMakeLists.txt
assets/: BuggyBug.glb  Lvl1.vs  Test_level.vs  cube.glb  lvl2.vs  lvl3.vs  menu_world.vs  world.vs
assets/levels/: Lvl1.vs  lvl0.vs  lvl1.vs  lvl2.vs  lvl3.vs  lvl4.vs
assets/models/: BuggyBug.ag  BuggyBug.glb  fan.ag  fan.glb  spiral.ag  spiral.glb
assets/models/boxes/: blue_box.glb  box_cube.glb  carton_box.glb  column.glb  grey_box.glb  helpfull_box.glb  kettle_box.glb  learn_cube1.glb  learn_cube2.glb  matches.glb  office_box.glb  outter_box.glb  outter_box2.glb  paper_box.glb  parameters.txt  small_box.glb  soda.glb  spaghetti.glb  test_carton_box.glb
assets/models/items/: Needle_n_thread_icon.ag  Needle_n_thread_icon.glb
assets/models/lvl2/: wire.glb
assets/models/switch/: base.glb  button.glb
assets/sound/: Init.bnk  Wwise_IDs.h  main.bnk
src/: main.cpp
src/core/: assert.cpp  assert.h  interned_string.cpp  interned_string.h  static_initialize.cpp  static_initialize.h
src/core/asset/: asset.cpp  asset.h  asset_2.cpp  value_storage.cpp  value_storage.h  value_storage_utils.cpp  value_storage_utils.h
src/core/ecs/: component.cpp  component.h  entity.cpp  entity.h  world.cpp  world.h  world_impl.h
src/core/math/: math_utils.cpp  math_utils.h  transform_utils.cpp  transform_utils.h
src/core/render/: camera_component.cpp  camera_component.h  mesh_system.cpp  mesh_system.h  model_asset.cpp  model_asset.h  model_component.cpp  model_component.h  render_control_system.cpp  render_control_system.h  texture_asset.cpp  texture_asset.h
src/core/ui/: ui_utils.cpp  ui_utils.h
src/core/world/: transform_component.cpp  transform_component.h
src/core/world/physics/: collision_component.cpp  collision_component.h  physics_system.cpp  physics_system.h  velocity_component.h
src/game/: static_initialize.cpp  static_initialize.h  world_creator.cpp  world_creator.h
src/game/abilities/: box_attachment_ability_component.h  box_attachment_system.cpp  box_attachment_system.h  fan_component.cpp  fan_component.h  fan_control_button_component.cpp  fan_control_button_component.h  fan_system.cpp  fan_system.h
src/game/box/: box_component.cpp  box_component.h  box_system.cpp  box_system.h
src/game/character/: camera_system.cpp  camera_system.h  character_component.cpp  character_component.h  character_system.cpp  character_system.h  input_receiver_component.cpp  input_receiver_component.h  input_system.cpp  input_system.h
src/game/inventory/: inventory_component.h  inventory_system.cpp  inventory_system.h  item_pickup_component.cpp  item_pickup_component.h
src/game/menu/: event_trigger_component.h  event_trigger_copmonent.cpp  event_trigger_system.cpp  event_trigger_system.h  menu_button_component.cpp  menu_button_component.h  menu_layer_component.cpp  menu_layer_component.h  menu_system.cpp  menu_system.h  upstream_interaction_component.h
src/game/surface/: surface_asset.cpp  surface_asset.h  surface_component.cpp  surface_component.h  surface_system.cpp  surface_system.h
src/game/ui/: hud_system.cpp  hud_system.h
src/sound/: low_level_io_hook.cpp  low_level_io_hook.h  sound_engine.cpp  sound_engine.h
src/sound/world/: sound_listener_component.cpp  sound_listener_component.h  sound_player_component.cpp  sound_player_component.h
tools/blender_exporter/: __init__.py  coord_transitioner.py  export_world.py  exporter.py  importer.py  vs.py
